--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: TEMA de ANTHONY
+Theme Name:  ANTHONY
 Theme URI: https://wordpress.org/themes/twentytwenty/
 Author: the OréSolierAnthonyBartolome
 Author URI: https://github.com/kairiMe
